# openclio

./: .gitignore  CLAUDE.md  README.md  REFACTOR_PLAN.md  example_system_prompts.ipynb  pyproject.toml  setup.py  test_installation.py
dev/: LOCAL_SETUP.md  QUICKSTART.md  README.md  setup_dev.sh  test_local.py
openclio/: __init__.py  faissKMeans.py  llm_interface.py  openclio.py  opencliotypes.py  prompts.py  structured_outputs.py  utils.py  vertex_llm.py  widget.py  writeOutput.py
