[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "openclio"
authors = [
    {name = "Danielle Ensign", email = "phylliida.dev@gmail.com"},
]
description = "Open source version of Anthropic's Clio: A system for privacy-preserving insights into real-world AI use"
readme = "README.md"
requires-python = ">=3.0"
license = {text = "MIT License"}
classifiers = [
    "Operating System :: OS Independent",
]
dependencies = [
    "umap-learn",
    "concave_hull",
    "tqdm",
    "dataclasses",
    "pandas",
    "sentence_transformers",
    "numpy",
    "scikit-learn",
    "scipy",
    "torch",
    "cloudpickle",
    "setuptools",
    "pyarrow",
    "faiss-cpu",
    "numba",
    "google-cloud-aiplatform>=1.38.0",
    "tenacity>=8.0.0",
    "anywidget>=0.9.0",
    "traitlets",
    "matplotlib>=3.0.0",
    "pydantic>=2.0.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Phylliida/OpenClio.git"
Issues = "https://github.com/Phylliida/OpenClio/issues"